<resources>
   <string name="app_name">TodoApp</string>
   <string name="edit_text_hint">Please Input Task Name</string>
   <string name="task_name">Task Name:</string>
   <string name="due_date">Due Date:</string>
   <string name="priority">Priority:</string>
   <string name="status">Status:</string>
   <string name="drawer_open">Open navigation drawer</string>
   <string name="drawer_close">Close navigation drawer</string>
   <string-array name="priority">
      <item>High</item>
      <item>Medium</item>
      <item>Low</item>
   </string-array>
   <string-array name="status">
      <item>Todo</item>
      <item>Done</item>
      <item>Expired</item>
   </string-array>
</resources>
